--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -3,7 +3,7 @@
 
 {% block title %}Kayıt Ol{% endblock %}
 
-{% block content %}
+{% block auth_content %}
 <div class="row justify-content-center">
     <div class="col-md-6">
         <div class="card shadow">
